--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -31,7 +31,7 @@
             [x] Clean up the formatting
             [x] Add a button for copying the prompt content to the clipboard
             [x] Add a form for filling in prompt variables and getting final version
-            [] Add a button for copying the final prompt to the clipboard
+            [x] Add a button for copying the final prompt to the clipboard
             [x] Add a button for sending the prompt to OpenAI API
             [x] Add a button for copying the OpenAI API response to the clipboard
             [] Add a button for downloading the OpenAI API response as a text file
@@ -423,7 +423,8 @@
                     
 
                     <div class="col-12">
-                        <button type="button" class="btn btn-primary" id="downloadButton">Download</button>
+                        <!-- Download Button disabled currently -->
+                        <!-- <button type="button" class="btn btn-primary" id="downloadButton">Download</button> -->
                         <button type="button" class="btn btn-primary" id="copyResponseButton">Copy Response</button>
                     </div>
                     
@@ -573,19 +574,18 @@
                     });
 
 
-                    // TODO make this work
-                    $('#downloadButton').click(function() {
-                        let runPromptContent = $('#runPromptContent').val();
-                        let runPromptVariables = $('#runPromptVariables').val();
+                    // Download the response from openAI as a text file (currently disabled)
+                    // $('#downloadButton').click(function() {
+                    //     let completionResponse = $('#completionResponse').val();
 
-                        //input validation
-                        if (runPromptContent === "") {
-                            alert("Please fill out all fields to download prompt");
-                            return;
-                        }
+                    //     //input validation
+                    //     if (completionResponse === "") {
+                    //         alert("Please get response before downloading");
+                    //         return;
+                    //     }
 
-                        //TODO Download the prompt as a text file
-                    });
+                    //     //TODO Download the response as a text file using jquery
+                    // });
                 });
 
 
