--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -624,7 +624,7 @@
 
             <div class="container">
                 <div class="row p-5">
-                    <div class="col-12">
+                    <div class="col-sm">
                         <button id="refreshData" class="btn btn-info">Refresh Prompts</button>
 
                         <!--Checkbox for simplified table, clean up this code later-->
