More formatting tweaks

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -627,11 +627,12 @@
             <!-- Display all prompts in a table -->
             <div class="container">
                 <div class="row p-2">
+                    <hr>
                     <div class="col-sm">
                         <button id="refreshData" class="btn btn-info">Refresh Prompts</button>
 
                         <!--Checkbox for simplified table, clean up this code later-->
-                        <input type="checkbox" id="simplifiedTable" name="simplified_table" value="simplified_table">
+                        <input type="checkbox" id="simplifiedTable" name="simplified_table" value="simplified_table" checked>
                         <label for="simplifiedTable">Simplified Table</label>
 
                     </div>
